@@ -94,3 +94,4 @@ Current
 	- Protocols: Track KICK and TOPIC
 	- API: Added create_core_flags
 	- Modules: added chanserv/info and chanserv/flist
+	- Modules: (chanserv|nickserv|operserv)/help: Improved how help is displayed.
